--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@
 		</div>
 		<div class="fix">
 			<h4><u>Day 4 - Match 7</u></h4>
-		<h3>India vs England</h3>
-			<h4>Starts at 4:45PM on 31-10-2020</h4>
+		<h3>India won by 29runs against England</h3>
+			<h4>Match Finished on 31-10-2020</h4><br>
+			<a href="https://cricclubs.com/StreetPremiereLeague/viewScorecard.do?matchId=916&clubId=18788"><p><u>View Full Scorecard>></u></p></a>
 		</div>
 		<div class="fix">
 			<h4><u>Day 4 - Match 8</u></h4>
-		<h3>Srilanka vs Australia</h3>
-			<h4>Starts at 3:30PM on 31-10-2020</h4>
+		<h3>Australia won by 26runs against SLK</h3>
+			<h4>Match Finished on 31-10-2020</h4><br>
+			<a href="https://cricclubs.com/StreetPremiereLeague/viewScorecard.do?matchId=917&clubId=18788"><p><u>View Full Scorecard>></u></p></a>
 		</div>
 		<div class="fix">
 			<h4><u>Day 5 - Match 9</u></h4>
